--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
    
-    <p>Number 1 - I'm a class!</p>
+    <p class="class-one">Number 1 - I'm a class!</p>
     
-    <div>Number 2 - I'm one ID.</div>
+    <div id="id-one">Number 2 - I'm one ID.</div>
    
-    <p>Number 3 - I'm a class, but cooler!</p>
+    <p class="class-one class-two">Number 3 - I'm a class, but cooler!</p>
     
-    <div>Number 4 - I'm another ID.</div>
+    <div id="id-two">Number 4 - I'm another ID.</div>
    
-    <p>Number 5 - I'm a class!</p>
+    <p class="class-one">Number 5 - I'm a class!</p>
  
   </body>
 </html>
