--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="font">Click Me!</button>
-    <button class="font background">No, Click Me!</button>
+    <button class="let-height black">Click Me!</button>
+    <button class="let-height yellow">No, Click Me!</button>
   </body>
 </html>
